<resources>
    <string name="app_name">Coin Checker</string>
    <string name="action_settings">Settings</string>
    <string name="remove">remove</string>
    <string name="clear_icon">clearIcon</string>
    <string name="placeholder">placeholder</string>
    <string name="symbol">symbol</string>
    <string name="percentChange24h">percentChange24h</string>
    <string name="trending">trending</string>
    <string name="price">price</string>
    <string name="percent">percent</string>
    <string name="add_coin">Add coin to list</string>
    <string name="add_option">Add</string>
    <string name="cancel_option">Cancel</string>
    <string name="refresh_notification">Refresh successful</string>
    <string name="saved_coin_to_check">Saved coin to check</string>
    <string name="action_remove_all">Remove all coins</string>
    <string name="action_remove">Removed coin form list</string>

    <string name="duplicate_coin_input">The coin is already added</string>
    <string name="action_refresh">Refresh</string>
    <string name="icon">icon</string>
    <string name="action_force_database">Force Update DB</string>
    <string name="force_database">Reload database form internet next time</string>
    <string name="coin_internet">Loading coins from internet</string>
    <string name="save_coin_internet">Saving coins to database</string>
    <string name="coin_database">Loading coins from database</string>
    <string name="coin_database_no_internet">No internet! Loading database</string>
    <string name="no_price">No price available!</string>
    <string name="no_data">No data!</string>



    <string name="action_order_index">Sort by index</string>
    <string name="order_index">Sorting by index</string>
    <string name="action_order_descending">Sort descending</string>
    <string name="order_descending">Sorting set to descending</string>
    <string name="action_order_ascending">Sort ascending</string>
    <string name="order_ascending">Sorting set to ascending</string>



    <string name="action_switch_currency_euro">Switch to euros</string>
    <string name="switch_currency_euro">Switched currency to euros</string>
    <string name="action_switch_currency_dollar">Switch to dollars</string>
    <string name="switch_currency_dollar">Switched currency to dollars</string>
    <string name="action_switch_currency_bitcoins">Switch to bitcoins</string>
    <string name="switch_currency_bitcoins">Switched currency to bitcoins</string>

    <string name="delete_all_notification">All unlocked coin checkers are removed</string>
    <string name="remove_all_question">Are you sure?</string>
    <string name="remove_all_info">This action will remove all coins from being checked!</string>
    <string name="remove_all_icons_info">This action will remove all icons from the device!</string>

    <string name="yes">Yes</string>

    <string name="locked">%1$s is locked</string>
    <string name="unlocked">%1$s is unlocked</string>
    <string name="lock_all">Lock all</string>
    <string name="unlock_all">Unlock all</string>
    <string name="all_coins_locked">All coins are now locked</string>
    <string name="all_coins_unlocked">All coins are now unlocked</string>
    <string name="close">Close</string>
    <string name="search_icon">search_icon</string>
    <string name="small_icon">small_icon</string>
    <string name="no_internet">No internet</string>
    <string name="delete_all_icons">Delete all icons</string>
    <string name="icon_remove_all">All small icons are removed</string>


</resources>
