<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.yzaazy.coinchecker.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove_all"
        android:orderInCategory="2"
        android:title="@string/action_remove_all" />
    <item
        android:id="@+id/switch_currency"
        android:orderInCategory="3"
        android:title="@string/action_switch_currency" />
    <item
        android:id="@+id/force_database"
        android:orderInCategory="4"
        android:title="@string/action_force_database" />


</menu>
