<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ivIcon"
        android:layout_marginLeft="-7dp" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="@+id/textPercentChange24h"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/ivIcon"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/btnRow"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.3"
        android:background="@android:color/transparent"
        android:contentDescription="@string/clear_icon"
        android:src="@drawable/ic_clear"
        android:text="@string/remove"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPercentChange24h"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/percent_change_24h"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>